--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@vitejs/plugin-react": "^3.1.0",
     "gh-pages": "^6.1.1",
     "typescript": "^5.3.3",
-    "vite": "^4.1.0"
+    "vite": "^4.1.0",
+    "vite-plugin-svgr": "^4.2.0"
   }
 }
